[project]
name = "tsfmx"
version = "1.1.0"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "numpy>=2.4.2",
    "pandas>=2.3.1",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.1",
    "timesfm[torch]",
    "torch>=2.8.0",
]
requires-python = ">=3.11"
authors = [{name = "Akito Shitara", email = "akitoshitara@gmail.com"}]
description = "Multimodal extension for time series foundation models"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/himura467/tsfmx"
Documentation = "https://github.com/himura467/tsfmx"
Repository = "https://github.com/himura467/tsfmx"
"Bug Tracker" = "https://github.com/himura467/tsfmx/issues"

[project.optional-dependencies]
sweep = [
    "wandb>=0.25.0",
]
all = [
    "wandb>=0.25.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "ty>=0.0.20",
    "types-pyyaml>=6.0.12.20250822",
    "types-tqdm>=4.67.0.20250809",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/tsfmx",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tsfmx"]

[tool.uv]
package = true

[tool.uv.sources]
timesfm = { git = "https://github.com/google-research/timesfm" }
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ty.src]
exclude = [".venv"]

[tool.ty.rules]
all = "error"

[tool.ty.analysis]
allowed-unresolved-imports = ["chronos.*", "timesfm.*"]

[tool.ruff]
target-version = "py311"
exclude = ["data/Time-MMD"]

line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle Error
    "W",  # pycodestyle Warning
    "F",  # Pyflakes
    "G004",  # logging-f-string
]
ignore = [
    "E501",  # line-too-long
]
